--- a/css/product.css
+++ b/css/product.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: "Amazon Ember", Arial, sans-serif;
 }
 
 .main-container {
@@ -90,6 +91,7 @@
 ::placeholder {
     color: gray;
     font-weight: 600;
+    text-align: start;
 }
 
 .btn {
@@ -291,7 +293,6 @@
 .nav-progressive-subnav {
     height: 50px;
 }
-
 .app-details {
     line-height: 0;
     margin-bottom: 20px;
@@ -302,7 +303,7 @@
     height: 55px;
     width: 100vw;
     border: 1px solid #6d6d6d99;
-    ;
+    
 }
 
 /* ---------------------main-image-container--- */
@@ -325,15 +326,6 @@
 #big-image {
     object-fit: cover;
 }
-
-.centerCol {
-    background-color: beige;
-}
-
-.rightCol {
-    /* background-color: brown; */
-}
-
 .texts {
     width: 100%;
     height: 100px;
@@ -351,13 +343,104 @@
 }
 .owl-carousel .owl-dots.disabled,
 .owl-carousel .owl-nav.disabled {
-    display: block !important; /* or any other appropriate display property */
+    display: block !important;
+}
+.main-col-img{
+    display: flex;
+}
+/* -------------------center col */
+.title-feature-div .text-h1{
+    font-size: 24px;
+}
+.a-link-center{
+    text-decoration: none;
+    color: #007185;
 }
 
+.parallelogram {
+        width: 137px;
+        height: 27px;
+        /* transform: skew(20deg); */
+        background: #555;
+        color:white;
+}
+
+.price-to{
+    font-size: 28px;
+}
+.mrp-div{
+    font-size: 12px;
+    color: #555;
+}
+.inclusive{
+    font-size: 14px;
+}
+.vsx-heading img{
+    width: 24px;
+    height: 24px;
+}
+.a-form-label{
+    display: inline;
+    color: #555;
+    font-weight: 400;
+}
+.selection{
+    font-weight: bold;
+}
+.a-span3{
+    width: 46%;
+    font-size: 14px;
+}
+.a-span9{
+    width: 74%;
+    font-size: 14px;
+}
+.bulets-h1{
+    font-size:16px;
+    font-weight: bold;
+}
+.bulet-p{
+    font-size: 14px;
+}
+.rev-h1{
+    font-size:16px;
+    font-weight: bold;
+}
+.a-color-base{
+    width: 61%;
+    font-size: 14px;
+}
+.fa-star-div{
+    width: 32%;
+    font-size: 14px;
+}
+.card-title{
+    font-size: 28px;
+}
+.card-color{
+    color: #007185;
+}
+.card-link{
+    text-decoration: none;
+    font-size: 0.8rem;
+}
+.card-table-heding{
+    font-size: 12px;
+    color: #555;
+    width: 90px;
+}
+.card-tb{
+    font-size: 12px;
+}
+.add-cart-btn{
+    width: 90%;
+}
+.busy-now-btn{
+    width: 90%;
+    background: #cc7d06;
+}
 /* mobile laptop view nav bar   */
 @media(max-width:1025px) {
-
-
     .nav-bar-belt-main {
         display: none;
         position: absolute;
