--- a/css/product.css
+++ b/css/product.css
@@ -251,8 +251,13 @@
     text-decoration: none;
     list-style: none;
     color: #000000;
-    font-size: 0.8rem;
+    font-size: 16px;
     overflow: hidden;
+    margin-right: 10px;
+}
+
+.nav-padding {
+    padding-left: 300px;
 }
 
 /* ----------------nav-sprit */
@@ -293,6 +298,7 @@
 .nav-progressive-subnav {
     height: 50px;
 }
+
 .app-details {
     line-height: 0;
     margin-bottom: 20px;
@@ -303,7 +309,7 @@
     height: 55px;
     width: 100vw;
     border: 1px solid #6d6d6d99;
-    
+
 }
 
 /* ---------------------main-image-container--- */
@@ -313,11 +319,11 @@
     height: 500px;
     width: 100% !important;
     object-fit: cover;
+    overflow: hidden;
 }
 
 #big-image img {
-    max-height: 500px;
-    max-width: 600px;
+    width: 100%;
     object-fit: cover;
     vertical-align: top;
     align-items: center;
@@ -326,6 +332,7 @@
 #big-image {
     object-fit: cover;
 }
+
 .texts {
     width: 100%;
     height: 100px;
@@ -341,116 +348,162 @@
     text-align: center;
     padding: 8px 0px;
 }
+
 .owl-carousel .owl-dots.disabled,
 .owl-carousel .owl-nav.disabled {
     display: block !important;
 }
-.main-col-img{
+
+.main-col-img {
     display: flex;
 }
+
+/* ----------------leftCol------ */
+
+
 /* -------------------center col */
-.title-feature-div .text-h1{
+.title-feature-div .text-h1 {
     font-size: 24px;
 }
-.a-link-center{
+
+.a-link-center {
     text-decoration: none;
     color: #007185;
 }
 
 .parallelogram {
-        width: 137px;
-        height: 27px;
-        /* transform: skew(20deg); */
-        background: #555;
-        color:white;
+    width: 137px;
+    height: 27px;
+    /* transform: skew(20deg); */
+    background: #555;
+    color: white;
 }
 
-.price-to{
+.price-to {
     font-size: 28px;
 }
-.mrp-div{
+
+.Great-btn {
+    background-color: #CC0C39 !important;
+    padding: 4px 8px 4px 8px !important;
+    border-radius: 4px;
+    display: inline-block;
+    vertical-align: middle;
+    font-size: 12px !important;
+    margin-bottom: 4px;
+    border: 0;
+    color: white
+}
+
+;
+
+.mrp-div {
     font-size: 12px;
     color: #555;
 }
-.inclusive{
+
+.inclusive {
     font-size: 14px;
 }
-.vsx-heading img{
+
+.vsx-heading img {
     width: 24px;
     height: 24px;
 }
-.vsx-heading{
+
+.vsx-heading {
     font-weight: bold;
 }
-.a-form-label{
+
+.a-form-label {
     display: inline;
     color: #555;
     font-weight: 400;
 }
-.selection{
+
+.selection {
     font-weight: bold;
 }
-.a-span3{
+
+.a-span3 {
     width: 46%;
     font-size: 14px;
 }
-.a-span9{
+
+.a-span9 {
     width: 74%;
     font-size: 14px;
 }
-.bulets-h1{
-    font-size:16px;
+
+.bulets-h1 {
+    font-size: 16px;
     font-weight: bold;
 }
-.a-color-base, .fa-star-div{
+
+.a-color-base,
+.fa-star-div {
     line-height: 30px;
 }
-.bulet-p{
+
+.bulet-p {
     font-size: 14px;
 }
-.rev-h1{
-    font-size:16px;
+
+.rev-h1 {
+    font-size: 16px;
     font-weight: bold;
 }
-.a-color-base{
+
+.a-color-base {
     width: 61%;
     font-size: 14px;
 }
-.fa-star-div{
+
+.fa-star-div {
     width: 32%;
     font-size: 14px;
 }
-.card-title{
+
+.card-title {
     font-size: 28px;
 }
-.card-color{
+
+.card-color {
     color: #007185;
 }
-.card-link{
+
+.card-link {
     text-decoration: none;
     font-size: 0.8rem;
 }
-.card-table-heding{
+
+.card-table-heding {
     font-size: 12px;
     color: #555;
     width: 90px;
 }
-.card-tb{
+
+.card-tb {
     font-size: 12px;
 }
-.add-cart-btn{
+
+.add-cart-btn {
     width: 90%;
 }
-.busy-now-btn{
+
+.busy-now-btn {
     width: 90%;
     background: rgb(226, 128, 15) !important;
 }
-.secure-transaction{
+
+.secure-transaction {
     color: #007185;
 }
-.card{
+
+.card {
     max-width: 300px;
 }
+
 /* mobile laptop view nav bar   */
 @media(max-width:1025px) {
     .nav-bar-belt-main {
@@ -459,7 +512,8 @@
     }
 
     .nav-m-navbar {
-        visibility: visible !important;
+        /* visibility: visible !important; */
+        display: block;
     }
 
     .nav-logobar {
@@ -603,5 +657,13 @@
         visibility: hidden;
         position: absolute;
     }
-
 }
+
+/* @media(max-width:1860px){
+    .start-col-div{
+        display: none;
+    }
+    .end-col-div{
+        display: none;
+    }
+} */
