--- a/css/product.css
+++ b/css/product.css
@@ -9,18 +9,22 @@
     width: 100%;
     max-width: 100%;
 }
+
 /* -------------------offcanvas-header */
-.offcanvas-header{
+.offcanvas-header {
     background-color: #131A22;
-    color:#ffffff
+    color: #ffffff
 }
-.slidebar-link h4{
+
+.slidebar-link h4 {
     font-size: 25px;
     font-weight: bold;
 }
-.txt-canva{
+
+.txt-canva {
     font-size: 20px;
 }
+
 .nav-belt {
     /* background: #000000; */
     width: 100%;
@@ -344,7 +348,7 @@
     object-fit: cover;
 }
 
-.texts{
+.texts {
     width: 100%;
     height: 100px;
 }
@@ -360,10 +364,10 @@
     padding: 8px 0px;
 }
 
-.owl-carousel .owl-dots.disabled,
+/* .owl-carousel .owl-dots.disabled,
 .owl-carousel .owl-nav.disabled {
     display: block !important;
-}
+} */
 
 .main-col-img {
     display: flex;
@@ -508,15 +512,17 @@
 .secure-transaction {
     color: #007185;
 }
+
 /* -------------------------owl carsoul body-- */
-.lm-btn-carsoul{
+.lm-btn-carsoul {
     width: 80%;
     height: auto;
     border: none;
     background-color: #CC0C39;
     color: #ffffff;
-    font-size:0.9rem;
+    font-size: 0.9rem;
 }
+
 .slder-box {
     width: 160px;
 }
@@ -525,23 +531,27 @@
     width: 100%;
 }
 
-.price-pre-corosoul{
+.price-pre-corosoul {
     color: #CC0C39;
     font-size: 24px;
 }
+
 .nav-subnav {
     overflow: hidden;
 }
-.item .afedback-form a{
+
+.item .afedback-form a {
     text-decoration: none;
     color: #007185;
     font-size: 14px;
 }
-.dolloer-price{
+
+.dolloer-price {
     font-size: 28px;
 }
+
 /* --------------------owl nav----- */
-.div-item-all .owl-nav{
+.div-item-all .owl-nav {
     /* display: flex;
     justify-content: space-between; */
     font-size: 45px;
@@ -584,23 +594,28 @@
 .slder-customer-box img {
     width: 100%;
 }
-.slder-customer-box .afedback-form a{
+
+.slder-customer-box .afedback-form a {
     text-decoration: none;
     color: #007185;
     font-size: 14px;
-} 
-.product-info{
+}
+
+.product-info {
     font-size: 18px;
     color: #f3a847;
 }
-.product-tb{
+
+.product-tb {
     font-size: 17px;
 }
-.Additional-tb{
+
+.Additional-tb {
     font-size: 17px;
 }
-td.color-tb{
-    background:#F0F2F2 !important;
+
+td.color-tb {
+    background: #F0F2F2 !important;
 }
 
 /* --------------------------------footer css */
@@ -684,7 +699,7 @@ td.color-tb{
 
 .footer-select-items a {
     text-decoration: none;
-    font-size:10px !important;
+    font-size: 10px !important;
 }
 
 .sele {
@@ -694,7 +709,7 @@ td.color-tb{
     height: 35px;
     cursor: pointer;
     font-weight: 300 !important;
-    font-size:0.8rem;
+    font-size: 0.8rem;
     border: none;
 }
 
@@ -711,6 +726,7 @@ td.color-tb{
     cursor: pointer;
     flex-wrap: nowrap;
 }
+
 .footer-bottom-area {
     background-color: #131A22
 }
@@ -734,6 +750,7 @@ td.color-tb{
     font-size: 12px !important;
     font-weight: 100 !important;
 }
+
 @media only screen and (max-width: 410px) {
     .footer-container {
         padding: 30px 15px;
@@ -903,14 +920,17 @@ td.color-tb{
 
     }
 }
+
 @media (max-width: 1200px) {
-    .texts{
+    .texts {
         display: none;
     }
-    .image-canva-caption{
+
+    .image-canva-caption {
         display: none;
     }
 }
+
 @media(min-width:1025px) {
     .nav-m-navbar {
         visibility: hidden;
@@ -919,17 +939,30 @@ td.color-tb{
 }
 
 @media(max-width:425px) {
-    .main-image-container{
+    .main-image-container {
         height: 300px;
-        width: 100% ;
- 
+        width: 100%;
+
     }
 }
-.carsoul-body-item1 .owl-nav{
+@media(max-width:600px) {
+    .carsoul-body-item1 .item{
+        /* justify-content: center; */
+        align-items: center !important;
+
+    }
+}
+
+.carsoul-body-item1 .owl-nav {
+    display: flex !important;
+    width: 100%;
+    justify-content: space-between;
+    top: 50%;
+    position: absolute;
+    transform: translateY(-50%);
+}
+.carsoul-body-item1 .item{
+    /* align-items: center !imporant;t */
     display: flex;
-width: 100%;
-justify-content: space-between;
-top: 50%;
-position: absolute;
-transform: translateY(-50%);
+    justify-content: center;
 }
